<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FFCA"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditText"
        style="@style/textViewStyleNZTA"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="EX. DM123456"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint=" Enter Driving Licence "
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/makeAppBtn"
        style="@style/textViewStyleNZTA.ButtonViewNZTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=" Make Appointment "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        android:onClick="makeAppListener"
        android:background="@drawable/button_normal"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/textViewStyleNZTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeAppBtn" />

    <Button
        android:id="@+id/summaryPersonalBtn"
        style="@style/textViewStyleNZTA.ButtonViewNZTA"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="checkAppPersonalListener"
        android:text=" Personal "
        app:layout_constraintEnd_toStartOf="@+id/summaryOverallBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@drawable/button_normal"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nzta_symbol" />

    <TextView
        android:id="@+id/textView"
        style="@style/textViewStyleNZTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/summaryOverallBtn"
        style="@style/textViewStyleNZTA.ButtonViewNZTA"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="checkAppOverallListener"
        android:text=" Overall "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/summaryPersonalBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@drawable/button_normal"/>


</androidx.constraintlayout.widget.ConstraintLayout>