...
        <TextView
            android:id="@+id/textView_title"
            style="@style/CustomDialog.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:text="@string/bookingConfirm"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/dayTextView_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_weight="0.4"
                android:background="@drawable/button_small"
                android:text="Cancel"
                android:layout_marginLeft="50dp" />

            <Button
                android:id="@+id/button_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/button_small"
                android:text="Submit"
                android:layout_marginLeft="30dp" />
...
